# deltalake-flight-rs

./: Cargo.toml  build.rs
proto/: deltaflight.proto
proto/arrow/flight/protocol/sql/: flight_sql.proto
src/: lib.rs  server.rs
src/server/: flight_sql.rs  mod.rs  utils.rs
src/server/operations/: create.rs  get.rs  info.rs  list.rs  mod.rs  put.rs
src/utils/: data_type_parser.rs  mod.rs
