[package]
name = "deltalake-flight-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.4.0"
arrow-flight = "53.4.0"
async-stream = "0.3.6"
deltalake = { version = "0.24.0", features = ["datafusion"] }
futures = "0.3.31"
prost = { version = "0.13.5", features = ["derive", "no-recursion-limit", "prost-derive"] }
prost-types = "0.13.5"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"


[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.12.3"

[patch.crates-io]
deltalake-core = { path = "/home/hanbo/repositories/deltalake-core-0.24.0", version = "0.24.0" }
