[package]
name = "deltalake-flight-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.2.1"
arrow-flight = "54.2.1"
async-stream = "0.3.6"
deltalake = { version = "0.25.0", features = ["datafusion"] }
futures = "0.3.31"
prost = { version = "0.13.5", features = ["derive", "no-recursion-limit", "prost-derive"] }
prost-types = "0.13.5"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"


[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.12.3"


[dev-dependencies]
hyper-util = { version = "0.1.10", features = ["tokio"] }
tempfile = "3.19.0"
tokio-stream = "0.1.17"
tower = "0.5.2"
